--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ install:
   - "pip install coveralls"
   - "python setup.py install"
 script: 
-  nosetests --with-coverage --cover-package=frecency
+  nosetests --with-coverage --cover-package=frecency --cover-branches
 after_success:
   coveralls
